--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
 </head>
 <body>
   <div id="header">
-	  <h1>Ghouls of Gainesville<button id="myBtn" class="button">About</button><button id="myBtn2" class="button button2">Credits</button></h1>
+	  <h1>Ghouls of Gainesville<button class="button">About</button><button class="button button2">Credits</button></h1>
 	  </div>
-	  <div id="aboutmodal" class="modal">	
-		  <div id="aboutcontent" class="modal-content">
+	  <div id="myModal" class="modal">	
+		  <div class="modal-content">
 		<span class="close">&times;</span>
 		<p>text</p>
 		  </div>  
 	  </div>
-	<div id="creditsmodal" class="modal">
-		<div id="creditscontent" class="modal-content">
+	<div id="myModal2" class="modal">
+		<div class="modal2-content">
 			<span class="close">&times;</span>
 			<p>text2</p>
 		</div>
@@ -152,34 +152,32 @@ function onLocationFound(e) {
     var marker = L.marker(e.latlng, {icon:userIcon}).addTo(map); // Add custom userIcon to marker
     marker.bindPopup("<b>Your Location</b><br>Refresh page to update.").openPopup();
 	}
-	      var modal = document.getElementById('aboutmodal');
-	  var btn = document.getElementById("myBtn");
-	  var span = document.getElementsByClassName("close")[0];
-	  btn.onclick = function() {
-		  modal.style.display = "block";
+// Get the modal
+	 var modal = document.getElementsByClassName('modal');
+	  // Get button that opens modal
+	  var btn = document.getElementsByClassName("button");
+	  // Get the <span> element that closes the modal
+	  var span = document.getElementsByClassName("close");
+	  // When user clicks the button, open the modal
+	  btn[0].onclick = function() {
+		  modal[0].style.display = "block";
 	  }
-	  span.onclick = function() {
-		  modal.style.display = "none";
+	  btn[1].onclick = function() {
+		  modal[1].style.display = "block";
 	  }
-		  window.onclick = function(event) {
-			  if (event.target == modal) {
-				  modal.style.display = "none";
-			  }
+	  // When the user clicks on <span> (x), close the modal
+	  span[0].onclick = function() {
+		  modal[0].style.display = "none";
+	  }
+	  span[1].onclick = function() {
+		  modal[1].style.display = "none";
+	  }
+	  // When the user clicks anywhere outside of the modal, close it
+	  window.onclick = function(event) {
+		  if (event.target == modal) {
+			  modal.style.display = "none";
 		  }
-	   	var modal = document.getElementById('creditsmodal');
-	  var btn = document.getElementById("myBtn2");
-	  var span = document.getElementsByClassName("close")[0];
-	  btn.onclick = function() {
-		  modal.style.display = "block";
 	  }
-	  span.onclick = function() {
-		  modal.style.display = "none";
-	  }
-		  window.onclick = function(event) {
-			  if (event.target == modal) {
-				  modal.style.display = "none";
-			  }
-		  }
   </script>
 </body>
 </html>
