--- a/index.html
+++ b/index.html
@@ -65,6 +65,19 @@
 		  background-color: rgb(0,0,0); /*Fallback color*/
 		  background-color: rgba(0,0,0,0.4); /*Black with opacity*/
 	  }
+	  #myModal2 {
+		  display: none; /*Hidden by default*/
+		  position: absolute; /*Stay in place*/
+		  z-index: 2; /*sit on top*/
+		  padding-top: 100px; /*Location of box*/
+		  left: 0;
+		  top: 0;
+		  width: 100%;
+		  height: 100%;
+		  overflow: auto; /*Enable scrolling if needed*/
+		  background-color: rgb(0,0,0); /*Fallback color*/
+		  background-color: rgba(0,0,0,0.4); /*Black with opacity*/
+	  }
 	  .modal-content {
 		  background-color: #fefefe;
 		  margin: auto;
