--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		  background-color: rgb(0,0,0); /*Fallback color*/
 		  background-color: rgba(0,0,0,0.4); /*Black with opacity*/
 	  }
-	  #myModal2 {
+	  .modal2 {
 		  display: none; /*Hidden by default*/
 		  position: absolute; /*Stay in place*/
 		  z-index: 2; /*sit on top*/
@@ -79,6 +79,13 @@
 		  background-color: rgba(0,0,0,0.4); /*Black with opacity*/
 	  }
 	  .modal-content {
+		  background-color: #fefefe;
+		  margin: auto;
+		  padding: 20px;
+		  border: 1px solid #888;
+		  width: 80%;
+	  }
+	  .modal2-content {
 		  background-color: #fefefe;
 		  margin: auto;
 		  padding: 20px;
