--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		  border: none;
 		  border-radius: 8px;
 		  color: 161C31;
-		  padding: 10px 20px;
+		  padding: 10px 10px;
 		  text-align: center;
 		  text-decoration: none;
 		  font-family: "Pirata One";
@@ -57,6 +57,7 @@
 		  position: absolute; /*Stay in place*/
 		  z-index: 2; /*sit on top*/
 		  padding-top: 100px; /*Location of box*/
+		  border-radius: 8px;
 		  left: 0;
 		  top: 0;
 		  width: 100%;
@@ -70,6 +71,7 @@
 		  position: absolute; /*Stay in place*/
 		  z-index: 2; /*sit on top*/
 		  padding-top: 100px; /*Location of box*/
+		  border-radius: 8px;
 		  left: 0;
 		  top: 0;
 		  width: 100%;
