--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		  border: none;
 		  border-radius: 8px;
 		  color: 161C31;
-		  padding: 10px 10px;
+		  padding: 10px 20px;
 		  text-align: center;
 		  text-decoration: none;
 		  font-family: "Pirata One";
@@ -46,7 +46,7 @@
 		  cursor: pointer;
 		  margin-right: 10px;
 		  margin-left: 100px;
-		  margin-bottom: 5px;
+		  margin-bottom: 20px;
 	  }
 	  .button2 {
 		  background-color: #384160;
@@ -57,7 +57,6 @@
 		  position: absolute; /*Stay in place*/
 		  z-index: 2; /*sit on top*/
 		  padding-top: 100px; /*Location of box*/
-		  border-radius: 8px;
 		  left: 0;
 		  top: 0;
 		  width: 100%;
@@ -71,7 +70,6 @@
 		  position: absolute; /*Stay in place*/
 		  z-index: 2; /*sit on top*/
 		  padding-top: 100px; /*Location of box*/
-		  border-radius: 8px;
 		  left: 0;
 		  top: 0;
 		  width: 100%;
@@ -81,14 +79,16 @@
 		  background-color: rgba(0,0,0,0.4); /*Black with opacity*/
 	  }
 	  .modal-content {
-		  background-color: #fefefe;
+		  background-color: #e3e8ef;
+		  border-radius: 8px;
 		  margin: auto;
 		  padding: 20px;
 		  border: 1px solid #888;
 		  width: 80%;
 	  }
 	  .modal2-content {
-		  background-color: #fefefe;
+		  background-color: #e3e8ef;
+		  border-radius: 8px;
 		  margin: auto;
 		  padding: 20px;
 		  border: 1px solid #888;
