--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		  cursor: pointer;
 		  margin-right: 10px;
 		  margin-left: 100px;
-		  margin-bottom: 20px;
+		  margin-top: 10px;
 	  }
 	  .button2 {
 		  background-color: #384160;
