--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 		  cursor: pointer;
 		  margin-right: 10px;
 		  margin-left: 100px;
-		  margin-top: 10px;
+		  position: relative;
+		  top: 30px;
+		  bottom: -30px;
 	  }
 	  .button2 {
 		  background-color: #384160;
