--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		margin-bottom: 0px;
 		height: 80px;
 		overflow: hidden;
+		position: relative;
 	  }		
 	 h1 {
 		color: #B7C0DE;
@@ -46,7 +47,7 @@
 		  cursor: pointer;
 		  margin-right: 10px;
 		  margin-left: 100px;
-		  position: relative;
+		  position: absolute;
 		  bottom: 10px;
 	  }
 	  .button2 {
