--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		margin-bottom: 0px;
 		height: 80px;
 		overflow: hidden;
-		position: relative;
+		position: absolute;
 	  }		
 	 h1 {
 		color: #B7C0DE;
