--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		margin-bottom: 0px;
 		height: 80px;
 		overflow: hidden;
-		position: absolute;
+		position: relative;
 	  }		
 	 h1 {
 		color: #B7C0DE;
@@ -32,6 +32,7 @@
 		text-align: left;
 		margin-top: 0px;
 		margin-bottom: 10px;
+		position: absolute;
 	  }
 	  .button {
 		  background-color: #8899D1;
