--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ function onLocationFound(e) {
     // Create a marker at the users "latlng" and add it to the map
     var marker = L.marker(e.latlng, {icon:userIcon}).addTo(map); // Add custom userIcon to marker
     marker.bindPopup("<b>Your Location</b><br>Refresh page to update.").openPopup();
-    marker.bringToFront
+    marker.bringToFront()
 	  }
 // Get the modal
 	 var modal = document.getElementsByClassName('modal');
