--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		  text-decoration: none;
 		  cursor: pointer;
 	  } 
-	  .container-fluid {
+	  html, body, #map {
 		  height: 95%;
 		  width: 100%;
 		  padding: 0px;
@@ -138,7 +138,7 @@
 			<p>text2</p>
 		</div>
 	</div>
-	<div id="map" class="container-fluid">
+	<div id="map">
 		</div>
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
