--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 		  background-color: #8899D1;
 		  border: none;
 		  border-radius: 8px;
+		  position: relative;
+		  top: 30px;
+		  left: 300px;
+		  right: -300px;
+		  bottom: -30px;
 		  color: 161C31;
 		  padding: 10px 20px;
 		  text-align: center;
@@ -48,12 +53,9 @@
 		  font-size: 20px;
 		  display: inline-block;
 		  cursor: pointer;
-		  margin-right: 10px;
-		  margin-left: 100px;
 	  }
 	  .button2 {
 		  background-color: #384160;
-	  	  margin-left: 30px;
 	  }
 	  .modal {
 		  display: none; /*Hidden by default*/
