--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 		  border: none;
 		  border-radius: 8px;
 		  position: relative;
-		  top: 30px;
-		  left: 150px;
-		  right: -150px;
+		  top: 0px;
+		  left: 100px;
+		  right: -100px;
 		  bottom: 0px;
 		  color: 161C31;
 		  padding: 10px 20px;
@@ -56,6 +56,7 @@
 	  }
 	  .button2 {
 		  background-color: #384160;
+		  margin-left: -30px;
 	  }
 	  .modal {
 		  display: none; /*Hidden by default*/
