--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 		  top: 0px;
 		  left: 100px;
 		  right: -100px;
-		  bottom: 0px;
+		  bottom: 15px;
+		  margin-right: 30px;
 		  color: 161C31;
 		  padding: 10px 20px;
 		  text-align: center;
