--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		height: 80px;
 		overflow: hidden;
 		width: 100%;
+		display: flex;
 	  }		
 	 h1 {
 		color: #B7C0DE;
@@ -34,7 +35,7 @@
 		text-align: left;
 		margin-top: 0px;
 		margin-bottom: 10px;
-		position: absolute;
+		flex: 1 0 auto;
 	  }
 	  .button {
 		  background-color: #8899D1;
