--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		  text-decoration: none;
 		  font-family: "Pirata One";
 		  font-size: 20px;
-		  display: flex;
+		  display: inline-block;
 		  cursor: pointer;
 	  }
 	  .button2 {
