--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 		}
 		.button { font-size: 16px !important;
 			padding: 3px 10px !important;
-			bottom: 40px;
+			text-align: center !important;
 		}
 		.button2 { font-size: 16px !important;
 			padding: 3px 10px !important;
-			bottom: 40px;
+			text-align: center !important;
 		}
 	}
 	hmtl, body, #header {
