--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
 		}
 		.button { font-size: 16px !important;
 			padding: 3px 10px !important;
-			text-align: center !important;
-		}
-		.button2 { font-size: 16px !important;
-			padding: 3px 10px !important;
-			text-align: center !important;
+			position: relative !important;
 		}
 	}
 	hmtl, body, #header {
