--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		}
 		.button { font-size: 16px !important;
 			padding: 3px 10px !important;
-			position: relative !important;
+			vertical-align: top !important;
 		}
 	}
 	hmtl, body, #header {
