--- a/index.html
+++ b/index.html
@@ -132,7 +132,10 @@
 </head>
 <body>
   <div id="header">
-	  <h1>Ghouls of Gainesville<button class="button">About</button><button class="button button2">Credits</button></h1>
+	  <h1>Ghouls of Gainesville</h1>
+	  <div class="button">
+		  <button class="button">About</button><button class="button button2">Credits</button></h1>
+	</div>
 	  </div>
 	  <div id="myModal" class="modal">	
 		  <div class="modal-content">
