--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
 	      rgba(0,0,0,0.4);
     }
 	@media only screen and (max-width: 767px) {
+		html, body, #header {
+			position: relative;
+		}
 		h1 { font-size: 30px !important;
 		     text-shadow: 2px 2px #3F434E !important;
 		     text-align: center !important;
 		}
 		.button { font-size: 16px !important;
 			padding: 3px 10px !important;
-			text-align: left !important;
+		}
+		#buttons {
+			position: absolute !important;
 		}
 	}
 	hmtl, body, #header {
@@ -133,7 +138,7 @@
 <body>
   <div id="header">
 	  <h1>Ghouls of Gainesville</h1>
-	  <div class="button">
+	  <div id="buttons">
 		  <button class="button">About</button><button class="button button2">Credits</button></h1>
 	</div>
 	  </div>
