--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     }
 	@media only screen and (max-width: 767px) {
 		html, body, #header {
-			position: relative;
+			position: relative !important;
+			size: 75px !important;
 		}
 		h1 { font-size: 30px !important;
 		     text-shadow: 2px 2px #3F434E !important;
@@ -29,6 +30,7 @@
 		}
 		#buttons {
 			position: absolute !important;
+			text-align: center !important;
 		}
 	}
 	hmtl, body, #header {
@@ -37,7 +39,7 @@
 		margin-left: 20px;
 		margin-top: 0px;
 		margin-bottom: 0px;
-		height: 80px;
+		height: 100px;
 		overflow: hidden;
 	  }		
 	 h1 {
