--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 	      rgba(0,0,0,0.4);
     }
 	@media only screen and (max-width: 767px) {
-		html, body, #header {
+		#header {
 			position: relative !important;
-			size: 75px !important;
+			size: 70px !important;
 		}
 		h1 { font-size: 30px !important;
 		     text-shadow: 2px 2px #3F434E !important;
@@ -50,6 +50,10 @@
 		text-align: left;
 		margin-top: 0px;
 		margin-bottom: 10px;
+	  }
+	  #buttons {
+		  position: absolute;
+		  right: 200px;
 	  }
 	  .button {
 		  background-color: #8899D1;
