--- a/index.html
+++ b/index.html
@@ -138,13 +138,12 @@
   </style>
 </head>
 <body>
-  <nav>
-	  <ul>
-		  <li><h1>Ghouls of Gainesville</h1></li>
-		  <li><button class="button">About</button></li>
-		  <li><button class="button button2">Credits</button></li>
-	  </ul>
-	</nav>
+  <div id="header">
+	  <h1>Ghouls of Gainesville</h1>
+	  <div id="buttons">
+		  <button class="button">About</button><button class="button button2">Credits</button>
+	  </div>
+	</div>
 	  <div id="myModal" class="modal">	
 		  <div class="modal-content">
 		<span class="close">&times;</span>
