--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
     }
 		@media only screen and (max-width: 767px) {
 				#header {
-					position: relative !important;
 					size: 70px !important;
 				}
-				h1 { font-size: 30px !important;
+				h1 { font-size: 35px !important;
 				     text-shadow: 2px 2px #3F434E !important;
 				     text-align: center !important;
 				}
+				#buttons {
+				     position: relative;
+				     
 				.button { font-size: 16px !important;
 					padding: 3px 10px !important;
 				}
@@ -58,7 +60,7 @@
 		  position: relative;
 		  left: 50px;
 		  right: -50px;
-		  bottom: 10px;
+		  bottom: 50px;
 		  margin-right: -40px;
 		  color: 161C31;
 		  padding: 10px 20px;
