--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		@media only screen and (max-width: 767px) {
 				#header {
 					position: relative !important;
-					height: 70px !important;
+					height: 80px !important;
 				}
 				h1 { font-size: 35px !important;
 				     text-shadow: 2px 2px #3F434E !important;
@@ -27,6 +27,7 @@
 				}
 				#buttons {
 				     position: absolute;
+				     top: -10px;
 			}
 				     
 				.button { font-size: 16px !important;
@@ -41,6 +42,7 @@
 		margin-bottom: 0px;
 		height: 150px;
 		overflow: hidden;
+		   display: flex;
 	  }			
 	   h1 {
 		color: #B7C0DE;
