--- a/index.html
+++ b/index.html
@@ -133,13 +133,14 @@
 		  text-decoration: none;
 		  cursor: pointer;
 	  } 
-	  html, body, #map {
+	  #map {
 		  height: 95%;
 		  width: 100%;
 		  padding: 0px;
 		  margin: 0px;	
 		  position: relative;
 		  z-index: 1;
+		  display: flex;
 	  }
   </style>
 </head>
