--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		@media only screen and (max-width: 767px) {
 				#header {
 					position: relative !important;
-					height: 80px !important;
+					height: 70px !important;
 				}
 				h1 { font-size: 35px !important;
 				     text-shadow: 2px 2px #3F434E !important;
@@ -27,7 +27,6 @@
 				}
 				#buttons {
 				     position: absolute;
-				     top: -10px;
 			}
 				     
 				.button { font-size: 16px !important;
@@ -42,7 +41,6 @@
 		margin-bottom: 0px;
 		height: 150px;
 		overflow: hidden;
-		   display: flex;
 	  }			
 	   h1 {
 		color: #B7C0DE;
@@ -133,14 +131,13 @@
 		  text-decoration: none;
 		  cursor: pointer;
 	  } 
-	  #map {
+	  html, body, #map {
 		  height: 95%;
 		  width: 100%;
 		  padding: 0px;
 		  margin: 0px;	
 		  position: relative;
 		  z-index: 1;
-		  display: flex;
 	  }
   </style>
 </head>
