--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		@media only screen and (max-width: 767px) {
 				#header {
 					position: relative !important;
-					height: 70px !important;
+					height: 80px !important;
 				}
 				h1 { font-size: 35px !important;
 				     text-shadow: 2px 2px #3F434E !important;
@@ -39,7 +39,7 @@
 		margin-left: 20px;
 		margin-top: 0px;
 		margin-bottom: 0px;
-		height: 150px;
+		height: 80px;
 		overflow: hidden;
 	  }			
 	   h1 {
@@ -54,6 +54,7 @@
 	  #buttons {
 		position: absolute;
 		right: 200px;
+		top: 70px;
 	  }
 	  .button {
 		  background-color: #8899D1;
