--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 				}
 				#buttons {
 				     position: absolute;
+				     top: 60px;
 			}
 				     
 				.button { font-size: 16px !important;
