--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       box-shadow: 0 3px 14px
 	      rgba(0,0,0,0.4);
     }
-		@media only screen and (max-width: 767px) {
+		@media only screen and (max-width: 820px) {
 				#header {
 					position: relative !important;
 					height: 80px !important;
@@ -26,8 +26,8 @@
 				     text-align: center !important;
 				}
 				#buttons {
-				     position: absolute;
-				     top: 60px;
+				     position: absolute !important;
+				     top: 70px !important;
 			}
 				     
 				.button { font-size: 16px !important;
