--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				     text-align: center !important;
 				}
 				#buttons {
-				     position: absolute !important;
+				     position: fixed !important;
 				     top: 70px !important;
 			}
 				     
