--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		overflow: hidden;
 	  }			
 	   h1 {
-		color: #B7C0DE;
+		color: #e3e8ef;
 		font-family: "Metal Mania";
 		font-size: 60px;
 		text-shadow: 3px 3px #3F434E;
