--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 </head>
 <body>
   <div id="header">
-	  <h1>Ghouls of Gainesville</h1>
+	  <h1><a href="#home">Ghouls of Gainesville</a></h1>
 	  <div id="buttons">
 		  <button class="button">About</button><button class="button button2">Credits</button>
 	  </div>
