--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		margin-bottom: 0px;
 		height: 80px;
 		overflow: hidden;
-	  }			
+	  }
 	   h1 {
 		color: #e3e8ef;
 		font-family: "Metal Mania";
@@ -52,6 +52,8 @@
 		margin-top: 0px;
 		margin-bottom: 10px;
 	  }
+	  h1 a:link {
+		  text-decoration: "none";
 	  #buttons {
 		position: absolute;
 		right: 200px;
