--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 		margin-top: 0px;
 		margin-bottom: 10px;
 	  }
+	  h1 a {color: inherit;}
 	  #buttons {
 		position: absolute;
 		right: 200px;
