--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 		margin-top: 0px;
 		margin-bottom: 10px;
 	  }
-	  h1 a {color: inherit;}
+	  h1 a {color: inherit;
+	  	text-decoration: "none";
+	  }
 	  #buttons {
 		position: absolute;
 		right: 200px;
