--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		overflow: hidden;
 	  }
 	   h1 {
-		color: #e3e8ef;
+		color: #eaeff7;
 		font-family: "Metal Mania";
 		font-size: 60px;
 		text-shadow: 3px 3px #3F434E;
@@ -53,7 +53,7 @@
 		margin-bottom: 10px;
 	  }
 	  h1 a {color: inherit;
-	  	text-decoration: "none";
+	  	text-decoration: none;
 	  }
 	  #buttons {
 		position: absolute;
