--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 		text-align: left;
 		margin-top: 0px;
 		margin-bottom: 10px;
+		text-decoration: none;
 	  }
 	  h1 a {color: inherit;
 	  	text-decoration: none;
