--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
   <link href='https://fonts.googleapis.com/css?family=Metal Mania' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Pirata One' rel='stylesheet'>
