--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
 		  overflow: auto; /*Enable scrolling if needed*/
 		  background-color: rgb(0,0,0); /*Fallback color*/
 		  background-color: rgba(0,0,0,0.4); /*Black with opacity*/
+		  text-align: center;
+		  font-family: "Helvetica";
 	  }
 	  .modal2 {
 		  display: none; /*Hidden by default*/
