--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
 		  overflow: auto; /*Enable scrolling if needed*/
 		  background-color: rgb(0,0,0); /*Fallback color*/
 		  background-color: rgba(0,0,0,0.4); /*Black with opacity*/
-		  text-align: center;
 		  font-family: "Helvetica";
 	  }
 	  .modal2 {
@@ -130,7 +129,7 @@
 	  }
 	  .close {
 		  color: #aaaaaa;
-		  floar: right;
+		  float: right;
 		  font-size: 28px;
 		  font-weight: bold;
 	  }
@@ -160,7 +159,7 @@
 	  <div id="myModal" class="modal">	
 		  <div class="modal-content">
 		<span class="close">&times;</span>
-			  <b>Welcome to Ghouls of Gainesville!</b><br><p>This map shows all the spookiest spots in Gainesville, FL, from cursed supermarkets to orb-infested graveyards. Your current location is shown as a blue evil-eye marker, and can be updated by refreshing the page. Compare this marker to ghosts scattered across the city to see which haunted location is closest to you. You can also cick on each ghost to learn more about each location.</p>
+			  <br><b style="text-align:center;">Welcome to Ghouls of Gainesville!</b><br><p>This map shows all the spookiest spots in Gainesville, FL, from cursed supermarkets to orb-infested graveyards. Your current location is shown as a blue evil-eye marker, and can be updated by refreshing the page. Compare this marker to ghosts scattered across the city to see which haunted location is closest to you. You can also cick on each ghost to learn more about each location.</p>
 		  </div>  
 	  </div>
 	<div id="myModal2" class="modal">
