--- a/index.html
+++ b/index.html
@@ -165,7 +165,22 @@
 	<div id="myModal2" class="modal">
 		<div class="modal2-content">
 			<span class="close">&times;</span>
-			<p>text2</p>
+			<br><b style="text-align:center;">Credits and References</b><br><p>This website was created by Maria Uribasterra, a geography student at the University of Florida.</p><p>In the spirit of the unknown, the references used in this project have variable credibility. Listed below are links to the sources I used for information and photos regarding each location:</p><ul>
+			<li>Norman Hall a href="https://www.alligator.org/news/campus/uf-campus-holds-decades-of-legends-ghost-stories/article_28668d1f-4473-57b1-9d52-ddce62158263.html">Information</a><a href="https://www.alligator.org/news/norman-hall-is-being-renovated-here-s-what-s-being/">Image</a></li>
+			<li>Thomas Hall</li>
+			<li>The Hippodrome</li>
+			<li>Beaty Towers</li>
+			<li>Sweetwater Branch Inn</li>
+			<li>The Antique Emporium</li>
+			<li>The Social</li>
+			<li>Steak 'n Shake</li>
+			<li>Pine Grove Cemetery</li>
+			<li>Burlington Coat Factory</li>
+			<li>Mount Pleasant Cemetery</li>
+			<li>Yummy House</li>
+			<li>Trader Joe's</li>
+			<li>Devil's Millhopper</li>
+		</ul>
 		</div>
 	</div>
 	<div id="map">
