--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
 		  background-color: rgb(0,0,0); /*Fallback color*/
 		  background-color: rgba(0,0,0,0.4); /*Black with opacity*/
 	  }
+	  .modal a {
+		  text-decoration: none;
+		  color: #3F434E;
+	  }
 	  .modal-content {
 		  background-color: #e3e8ef;
 		  border-radius: 8px;
