--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 			<li>Trader Joe's: <a href="https://www.hauntedplaces.org/item/goodys-trader-joes/">Information / </a><a href="https://locations.traderjoes.com/fl/gainesville/764/">Image</a></li>
 			<li>Devil's Millhopper: <a href="https://www.hauntedplaces.org/item/devils-millhopper-geological-state-park/">Information / </a><a href="https://www.orlandoweekly.com/orlando/devils-millhopper-geological-state-park-is-a-worthy-day-trip/Content?oid=2469185">Image</a></li>
 		</ul>
-			<p>The map itself was created using LeafletJS, OpenStreetMap, and customizable Mapbox tiles.</p><br><p>Icons made by <a href="https://www.flaticon.com/authors/pixelmeetup" title="Pixelmeetup">Pixelmeetup</a> <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a>, licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p><p>Background image taken from <a href= “https://www.conoscenzealconfine.it/” title=“Conoscenze al Confine”>Conoscenze al Confine</a></p></br><br>
+			<p>The map itself was created using LeafletJS, OpenStreetMap, and customizable Mapbox tiles.</p><br><p>Icons made by <a href="https://www.flaticon.com/authors/pixelmeetup" title="Pixelmeetup">Pixelmeetup</a> <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a>, licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p><p>Background image taken from <a href= “https://www.conoscenzealconfine.it/”>Conoscenze al Confine</a></p></br><br>
 		</div>
 	</div>
 	<div id="map">
